--- a/Task 5 Prediction using Decision Tree Algorithm.ipynb
+++ b/Task 5 Prediction using Decision Tree Algorithm.ipynb
@@ -1,8 +1,26 @@
 {
  "cells": [
   {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "## Data Science and Data Analysis Intern \n",
+    "### (The Sparks Foundation)\n",
+    "\n",
+    "\n",
+    "# Dikshant Sharma"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "##                                                                    Task5: Prediction using Decision Tree Algorithm"
+   ]
+  },
+  {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 2,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -15,7 +33,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 3,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -24,7 +42,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 4,
    "metadata": {},
    "outputs": [
     {
@@ -165,13 +183,145 @@
        "9  10            4.9           3.1            1.5           0.1  Iris-setosa"
       ]
      },
-     "execution_count": 3,
+     "execution_count": 4,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
     "df.head(10)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 5,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "<class 'pandas.core.frame.DataFrame'>\n",
+      "RangeIndex: 150 entries, 0 to 149\n",
+      "Data columns (total 6 columns):\n",
+      " #   Column         Non-Null Count  Dtype  \n",
+      "---  ------         --------------  -----  \n",
+      " 0   Id             150 non-null    int64  \n",
+      " 1   SepalLengthCm  150 non-null    float64\n",
+      " 2   SepalWidthCm   150 non-null    float64\n",
+      " 3   PetalLengthCm  150 non-null    float64\n",
+      " 4   PetalWidthCm   150 non-null    float64\n",
+      " 5   Species        150 non-null    object \n",
+      "dtypes: float64(4), int64(1), object(1)\n",
+      "memory usage: 7.2+ KB\n"
+     ]
+    }
+   ],
+   "source": [
+    "df.info()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 6,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/html": [
+       "<div>\n",
+       "<style scoped>\n",
+       "    .dataframe tbody tr th:only-of-type {\n",
+       "        vertical-align: middle;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe tbody tr th {\n",
+       "        vertical-align: top;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe thead th {\n",
+       "        text-align: right;\n",
+       "    }\n",
+       "</style>\n",
+       "<table border=\"1\" class=\"dataframe\">\n",
+       "  <thead>\n",
+       "    <tr style=\"text-align: right;\">\n",
+       "      <th></th>\n",
+       "      <th>Id</th>\n",
+       "      <th>SepalLengthCm</th>\n",
+       "      <th>SepalWidthCm</th>\n",
+       "      <th>PetalLengthCm</th>\n",
+       "      <th>PetalWidthCm</th>\n",
+       "    </tr>\n",
+       "  </thead>\n",
+       "  <tbody>\n",
+       "    <tr>\n",
+       "      <th>Id</th>\n",
+       "      <td>1.000000</td>\n",
+       "      <td>0.716676</td>\n",
+       "      <td>-0.397729</td>\n",
+       "      <td>0.882747</td>\n",
+       "      <td>0.899759</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>SepalLengthCm</th>\n",
+       "      <td>0.716676</td>\n",
+       "      <td>1.000000</td>\n",
+       "      <td>-0.109369</td>\n",
+       "      <td>0.871754</td>\n",
+       "      <td>0.817954</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>SepalWidthCm</th>\n",
+       "      <td>-0.397729</td>\n",
+       "      <td>-0.109369</td>\n",
+       "      <td>1.000000</td>\n",
+       "      <td>-0.420516</td>\n",
+       "      <td>-0.356544</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>PetalLengthCm</th>\n",
+       "      <td>0.882747</td>\n",
+       "      <td>0.871754</td>\n",
+       "      <td>-0.420516</td>\n",
+       "      <td>1.000000</td>\n",
+       "      <td>0.962757</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>PetalWidthCm</th>\n",
+       "      <td>0.899759</td>\n",
+       "      <td>0.817954</td>\n",
+       "      <td>-0.356544</td>\n",
+       "      <td>0.962757</td>\n",
+       "      <td>1.000000</td>\n",
+       "    </tr>\n",
+       "  </tbody>\n",
+       "</table>\n",
+       "</div>"
+      ],
+      "text/plain": [
+       "                     Id  SepalLengthCm  SepalWidthCm  PetalLengthCm  \\\n",
+       "Id             1.000000       0.716676     -0.397729       0.882747   \n",
+       "SepalLengthCm  0.716676       1.000000     -0.109369       0.871754   \n",
+       "SepalWidthCm  -0.397729      -0.109369      1.000000      -0.420516   \n",
+       "PetalLengthCm  0.882747       0.871754     -0.420516       1.000000   \n",
+       "PetalWidthCm   0.899759       0.817954     -0.356544       0.962757   \n",
+       "\n",
+       "               PetalWidthCm  \n",
+       "Id                 0.899759  \n",
+       "SepalLengthCm      0.817954  \n",
+       "SepalWidthCm      -0.356544  \n",
+       "PetalLengthCm      0.962757  \n",
+       "PetalWidthCm       1.000000  "
+      ]
+     },
+     "execution_count": 6,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "df.corr()"
    ]
   },
   {
