--- a/Task 2 Prediction Using Unsupervised ML.ipynb
+++ b/Task 2 Prediction Using Unsupervised ML.ipynb
@@ -1,6 +1,31 @@
 {
  "cells": [
   {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "## Data Science and Data Analysis Intern \n",
+    "### (The Sparks Foundation)\n",
+    "\n",
+    "\n",
+    "# Dikshant Sharma\n"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "##                                                                    Task2: Prediction Using unsupervised Machine Learning\n"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "### Importing libraries"
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": 1,
    "metadata": {},
@@ -642,84 +667,10 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 60,
+   "execution_count": null,
    "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "text/plain": [
-       "array([[7. , 3.2, 4.7, 1.4],\n",
-       "       [6.4, 3.2, 4.5, 1.5],\n",
-       "       [5.5, 2.3, 4. , 1.3],\n",
-       "       [6.5, 2.8, 4.6, 1.5],\n",
-       "       [5.7, 2.8, 4.5, 1.3],\n",
-       "       [6.3, 3.3, 4.7, 1.6],\n",
-       "       [4.9, 2.4, 3.3, 1. ],\n",
-       "       [6.6, 2.9, 4.6, 1.3],\n",
-       "       [5.2, 2.7, 3.9, 1.4],\n",
-       "       [5. , 2. , 3.5, 1. ],\n",
-       "       [5.9, 3. , 4.2, 1.5],\n",
-       "       [6. , 2.2, 4. , 1. ],\n",
-       "       [6.1, 2.9, 4.7, 1.4],\n",
-       "       [5.6, 2.9, 3.6, 1.3],\n",
-       "       [6.7, 3.1, 4.4, 1.4],\n",
-       "       [5.6, 3. , 4.5, 1.5],\n",
-       "       [5.8, 2.7, 4.1, 1. ],\n",
-       "       [6.2, 2.2, 4.5, 1.5],\n",
-       "       [5.6, 2.5, 3.9, 1.1],\n",
-       "       [5.9, 3.2, 4.8, 1.8],\n",
-       "       [6.1, 2.8, 4. , 1.3],\n",
-       "       [6.3, 2.5, 4.9, 1.5],\n",
-       "       [6.1, 2.8, 4.7, 1.2],\n",
-       "       [6.4, 2.9, 4.3, 1.3],\n",
-       "       [6.6, 3. , 4.4, 1.4],\n",
-       "       [6.8, 2.8, 4.8, 1.4],\n",
-       "       [6. , 2.9, 4.5, 1.5],\n",
-       "       [5.7, 2.6, 3.5, 1. ],\n",
-       "       [5.5, 2.4, 3.8, 1.1],\n",
-       "       [5.5, 2.4, 3.7, 1. ],\n",
-       "       [5.8, 2.7, 3.9, 1.2],\n",
-       "       [6. , 2.7, 5.1, 1.6],\n",
-       "       [5.4, 3. , 4.5, 1.5],\n",
-       "       [6. , 3.4, 4.5, 1.6],\n",
-       "       [6.7, 3.1, 4.7, 1.5],\n",
-       "       [6.3, 2.3, 4.4, 1.3],\n",
-       "       [5.6, 3. , 4.1, 1.3],\n",
-       "       [5.5, 2.5, 4. , 1.3],\n",
-       "       [5.5, 2.6, 4.4, 1.2],\n",
-       "       [6.1, 3. , 4.6, 1.4],\n",
-       "       [5.8, 2.6, 4. , 1.2],\n",
-       "       [5. , 2.3, 3.3, 1. ],\n",
-       "       [5.6, 2.7, 4.2, 1.3],\n",
-       "       [5.7, 3. , 4.2, 1.2],\n",
-       "       [5.7, 2.9, 4.2, 1.3],\n",
-       "       [6.2, 2.9, 4.3, 1.3],\n",
-       "       [5.1, 2.5, 3. , 1.1],\n",
-       "       [5.7, 2.8, 4.1, 1.3],\n",
-       "       [5.8, 2.7, 5.1, 1.9],\n",
-       "       [4.9, 2.5, 4.5, 1.7],\n",
-       "       [5.7, 2.5, 5. , 2. ],\n",
-       "       [5.8, 2.8, 5.1, 2.4],\n",
-       "       [6. , 2.2, 5. , 1.5],\n",
-       "       [5.6, 2.8, 4.9, 2. ],\n",
-       "       [6.3, 2.7, 4.9, 1.8],\n",
-       "       [6.2, 2.8, 4.8, 1.8],\n",
-       "       [6.1, 3. , 4.9, 1.8],\n",
-       "       [6.3, 2.8, 5.1, 1.5],\n",
-       "       [6. , 3. , 4.8, 1.8],\n",
-       "       [5.8, 2.7, 5.1, 1.9],\n",
-       "       [6.3, 2.5, 5. , 1.9],\n",
-       "       [5.9, 3. , 5.1, 1.8]])"
-      ]
-     },
-     "execution_count": 60,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
-   "source": [
-    "X[y==0]"
-   ]
+   "outputs": [],
+   "source": []
   },
   {
    "cell_type": "code",
